@@ -1,3 +1,11 @@
+bobcat (4.08.01)
+
+  * Fixed a bug in fswap due to which fswap could not swap plain pointers.
+
+  * The String class header file now includes cstring instead of strings.h
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 31 Aug 2017 11:14:11 +0200
+
 bobcat (4.08.00)
 
   * Added new classes IQuotedPrintableStream and IQuotedPrintableStreambuf.
